Fixing visiblity

--- a/src/styles/components/modal/Modal.scss
+++ b/src/styles/components/modal/Modal.scss
@@ -14,6 +14,7 @@
 
   &.isShow{
     opacity: 1;
+    visibility: visible;
     pointer-events: initial;
 
     .modal-wrapper{
@@ -23,6 +24,7 @@
 
   &.isHide{
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 
     .modal-wrapper{
